Exit build if test database not available